--- a/README.adoc
+++ b/README.adoc
@@ -97,6 +97,8 @@ Il existe de nombreuses solutions :
 On utilise tous une JVM
 --
 
+== les hyperviseurs
+
 === les hyperviseurs
 
 * L'approche est similaire, mais l'OS est allégé pour permettre un accès plus rapide aux couches basse du système et donc améliorer les performances. 
